# bandit-bench

./: .gitignore  Makefile  README.md  pyproject.toml
cb_comparison/: __init__.py  cli.py
cb_comparison/algorithms/: contextual_bandits_lib.py  pytorch_bandits.py  river_bandits.py  vowpal_bandits.py
cb_comparison/core/: base.py
cb_comparison/data/: dataset.py
cb_comparison/evaluation/: metrics.py  simulator.py  visualizer.py
src/: cli.py
src/algorithms/: contextual_bandits_lib.py  pytorch_bandits.py  river_bandits.py  vowpal_bandits.py
src/bandits/: base.py  cb_library.py  pytorch_bandit.py  river_bandit.py  vowpal_bandit.py
src/cb_comparison/: cli.py
src/cb_comparison/bandits/: __init__.py  base.py  cb_library.py  pytorch_bandit.py  river_bandit.py  vowpal_bandit.py
src/cb_comparison/data/: dataset.py
src/cb_comparison/evaluation/: comparison.py  metrics.py
src/cb_comparison/utils/: visualization.py
src/data/: __init__.py  dataset.py
src/evaluation/: __init__.py  comparison.py  metrics.py  simulator.py  visualizer.py
src/utils/: __init__.py  visualization.py
tests/: test_bandits.py  test_base.py  test_dataset.py  test_metrics.py
