[project]
name = "bandit-bench"
version = "0.1.0"
description = "Comparison of contextual bandit implementations and exploration algorithms"
readme = "README.md"
requires-python = ">=3.9,<3.12"
authors = [
    {name = "Vitor Sousa", email = "vitorsousavhcs@outlook.com"}
]
keywords = ["contextual-bandits", "reinforcement-learning", "machine-learning", "vowpal-wabbit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer==0.12.5",
    "click==8.1.7",
    "vowpalwabbit>=9.9.0,<9.11.0",
    "torch>=2.0.0,<2.2.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<2.2.0",
    "scikit-learn>=1.3.0,<1.5.0",
    "matplotlib>=3.7.0,<3.9.0",
    "seaborn>=0.12.0,<0.14.0",
    "contextualbandits>=0.3.0,<0.4.0",
    "river>=0.21.0,<0.22.0",
    "rich>=13.0.0,<14.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "plotly>=5.14.0,<6.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "setuptools<81",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
cb-compare = "cb_comparison.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cb_comparison"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=cb_comparison --cov-report=html --cov-report=term-missing"
